--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,23 @@ repositories {
     mavenCentral()
 }
 
+test {
+    useJUnitPlatform()
+}
+
+
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.7.1'
     implementation 'org.antlr:antlr4-runtime:4.7.2'
-    implementation ('org.slf4j:slf4j-api:1.7.25')
-    implementation('com.alibaba:fastjson:1.2.76')
+    implementation('org.slf4j:slf4j-api:1.7.30')
+
+
+    testCompile('com.alibaba:fastjson:1.2.76')
+    compileOnly('com.alibaba:fastjson:1.2.76')
+    compileOnly('com.fasterxml.jackson.core:jackson-core:2.12.3')
+    compileOnly('com.fasterxml.jackson.core:jackson-databind:2.12.3')
+    testCompile('com.fasterxml.jackson.core:jackson-core:2.12.3')
+    testCompile('com.fasterxml.jackson.core:jackson-databind:2.12.3')
+
+    testCompile('ch.qos.logback:logback-classic:1.2.3')
 }
