--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,8 @@ test {
 
 dependencies {
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.7.1'
-    implementation 'org.antlr:antlr4-runtime:4.7.2'
-    implementation('org.slf4j:slf4j-api:1.7.30')
+    compile 'org.antlr:antlr4-runtime:4.7.2'
+    compile('org.slf4j:slf4j-api:1.7.30')
 
     compileOnly 'org.elasticsearch.client:elasticsearch-rest-client:7.12.0'
     compileOnly ('io.projectreactor:reactor-core:3.3.13.RELEASE')
