发布第一个测试版

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 apply from: 'upload.gradle'
 
 group 'com.manymobi'
-version '1.0.0-SNAPSHOT'
+version '1.0.0-beta1'
 
 sourceCompatibility = 1.8
 
