--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'antlr'
 apply from: 'upload.gradle'
 
 group 'com.manymobi'
-version '1.0.0-beta2-SNAPSHOT'
+version '1.0.0-beta2'
 
 sourceCompatibility = 1.8
 
