--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'antlr'
 apply from: 'upload.gradle'
 
 group 'com.manymobi'
-version '1.0.0-beta2'
+version '1.0.0-beta3-SNAPSHOT'
 
 sourceCompatibility = 1.8
 
@@ -25,20 +25,21 @@ configurations {
 
 dependencies {
     testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.7.1'
-    compile 'org.antlr:antlr4-runtime:4.9.2'
-    compile('org.slf4j:slf4j-api:1.7.30')
+    api 'org.antlr:antlr4-runtime:4.9.2'
+    api('org.slf4j:slf4j-api:1.7.30')
     antlr("org.antlr:antlr4:4.9.2")
     compileOnly 'org.elasticsearch.client:elasticsearch-rest-client:7.12.0'
     compileOnly('io.projectreactor:reactor-core:3.3.13.RELEASE')
 
-    testCompile('com.alibaba:fastjson:1.2.76')
+    testImplementation('com.alibaba:fastjson:1.2.76')
     compileOnly('com.alibaba:fastjson:1.2.76')
     compileOnly('com.fasterxml.jackson.core:jackson-core:2.12.3')
     compileOnly('com.fasterxml.jackson.core:jackson-databind:2.12.3')
-    testCompile('com.fasterxml.jackson.core:jackson-core:2.12.3')
-    testCompile('com.fasterxml.jackson.core:jackson-databind:2.12.3')
+    testImplementation('com.fasterxml.jackson.core:jackson-core:2.12.3')
+    testImplementation('com.fasterxml.jackson.core:jackson-databind:2.12.3')
 
-    testCompile('ch.qos.logback:logback-classic:1.2.3')
+
+    testImplementation('ch.qos.logback:logback-classic:1.2.3')
 }
 
 generateGrammarSource {
